// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainPage must render data 1`] = `
<main
  className="max-w-2xl mx-auto mt-16"
>
  <div
    className="flex justify-between mt-8 mb-2"
  >
    <h2
      className="text-2xl font-bold leading-7 text-gray-900"
    >
      Episodes
    </h2>
    <nav
      className="flex"
    >
      <div
        className="cursor-pointer ml-8 px-4"
        onClick={[Function]}
      >
        Better Call Saul
      </div>
      <div
        className="cursor-pointer text-red-600"
        onClick={[Function]}
      >
        Breaking Bad
      </div>
    </nav>
  </div>
  <div
    className="flex py-4"
  >
    <div
      className="px-2 cursor-pointer text-red-600"
      onClick={[Function]}
    >
      1
    </div>
  </div>
  <div
    className="flex flex-col"
  >
    <div
      className="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
    >
      <div
        className="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8"
      >
        <div
          className="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
        >
          <table
            className="min-w-full divide-y divide-gray-200"
          >
            <thead
              className="bg-gray-50"
            >
              <tr>
                <th
                  className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                  scope="col"
                >
                  Episode Number
                </th>
                <th
                  className="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
                  scope="col"
                >
                  Title
                </th>
              </tr>
            </thead>
            <tbody
              className="bg-white divide-y divide-gray-200"
            >
              <tr
                className="cursor-pointer"
                onClick={[Function]}
              >
                <td
                  className="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                >
                  5
                </td>
                <td
                  className="px-6 py-4 whitespace-nowrap text-sm text-gray-500"
                >
                  Alpine Shepherd Boy
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`MainPage must render loading 1`] = `
<main
  className="max-w-2xl mx-auto mt-16"
>
  <div
    className="flex justify-between mt-8 mb-2"
  >
    <h2
      className="text-2xl font-bold leading-7 text-gray-900"
    >
      Episodes
    </h2>
    <nav
      className="flex"
    >
      <div
        className="cursor-pointer ml-8 px-4"
        onClick={[Function]}
      >
        Better Call Saul
      </div>
      <div
        className="cursor-pointer text-red-600"
        onClick={[Function]}
      >
        Breaking Bad
      </div>
    </nav>
  </div>
  <h3>
    Loading...
  </h3>
</main>
`;
